--- a/src/components/menu/menu-item.scss
+++ b/src/components/menu/menu-item.scss
@@ -1,5 +1,7 @@
-.menu-link {
+a:hover{
   text-decoration: none;
+}
+.menu-link {
   position: relative;
   margin: 15px;
   font-family: "Raleway", sans-serif;
