--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,10 +1,10 @@
 .menu {
   height: 60px;
+  margin:40px;
   display: flex;
   padding: 20px;
   justify-content: space-between;
   align-items: center;
-  margin: auto;
   background: #ffffff;
   box-shadow:0 0 20px 5px #efe9e9;
   border-radius: 3px;
