add second input

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -23,7 +23,7 @@
   .footer-social {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     padding-top: 10px;
     svg {
       margin-right: 30px;
